# remora-compiler

./: .gitignore  dune-project  remora.opam
examples/: conv2d.remora  fft.remora  vgg16.remora
examples/h5build/: CMakeLists.txt  h5test.cpp  test.cu
lib/: BaseEnvironment.ml  Compiler.ml  Compiler.mli  DeviceInfo.ml  EsexpLexer.mll  EsexpParser.mly  Identifier.ml  Identifier.mli  IndexMode.ml  IndexingModeDrafting.ml  Maybe.ml  RemoraParser.mly  dune
lib/IntermediateLanguages/: Acorn.ml  Ast.ml  C.ml  Corn.ml  Esexp.ml  Esexp.mli  Explicit.ml  Nested.ml  Nucleus.ml  Typed.ml
lib/Stages/: Alloc.ml  Capture.ml  Codegen.ml  Codegen.mli  Explicitize.ml  Fuse.ml  FuseAndSimplify.ml  Inline.ml  Kernelize.ml  Nest.ml  Parse.ml  Parse.mli  PrintC.ml  RemoveMemMove.ml  RemoveMemMove.mli  Simplify.ml  Simplify.mli  TupleReduce.ml  TypeCheck.ml  TypeCheckStage.ml
tests/unit/: test_parse.ml  test_type_check.ml
