(menhir
 (modules EsexpParser RemoraParser))

(ocamllex EsexpLexer)

(include_subdirs unqualified)

(library
 (name remora)
 (public_name remora)
 (modules :standard RemoraParser EsexpParser EsexpLexer)
 (libraries base re2)
 (preprocess
  (pps ppx_jane ppx_deriving.eq ppx_deriving.show ppx_deriving.ord)))

(env
 (dev
  (flags
   (:standard -w -30 -warn-error -32))))
